changing delta code inline with new snapshot